Deployment-hello.yml
---
kind: "Deployment"
apiVersion: "extensions/v1beta1"
metadata:
  annotations: {}
  name: "hello"
  labels:
    nirmata.io/deployment.name: "hello"
    nirmata.io/component: "hello"
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      nirmata.io/component: "hello"
    matchExpressions: []
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations: {}
      labels:
        nirmata.io/deployment.name: "hello"
        nirmata.io/component: "hello"
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector: {}
      containers:
      - name: "hello"
        image: "nirmata/deals:blue"
        command: []
        args: []
        ports:
        - name: "hello"
          containerPort: 8080
          protocol: "TCP"
