Service-my-nginx.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  name: "my-nginx"
  labels:
    nirmata.io/service.name: "my-nginx"
    nirmata.io/component: "my-nginx"
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  type: "ClusterIP"
  selector:
    nirmata.io/component: "my-nginx"
  ports:
  - port: 80
    protocol: "TCP"
